# dumb-cgi

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  request.rs  response.rs  test.rs
test/: requester.css  requester.html  requester.js
