[package]
name = "dumb_cgi"
description = "An adequate CGI library for server-side CGI programs"
version = "0.3.0"
repository = "https://github.com/d2718/dumb-cgi"
license = "MIT"
edition = "2021"

[dependencies]
log = "^0.4"

simplelog = { version = "^0.12", optional = true }

[features]
log = ["dep:simplelog"]