[package]
name = "dumb_cgi"
description = "An adequate, dependency-free CGI library for server-side CGI programs"
version = "0.8.0"
repository = "https://github.com/d2718/dumb-cgi"
homepage = "https://github.com/d2718/dumb-cgi"
license = "MIT"
edition = "2021"

keywords = ["cgi", "webdev"]
categories = ["network-programming", "web-programming", "web-programming::http-server"]
readme = "README.md"
exclude = [
  "test/*",
  "src/bin/*"
]

[dependencies]
log = { version = "^0.4", optional = true }
simplelog = { version = "^0.12", optional = true }

[features]
default = []
log = ["dep:log", "dep:simplelog"]
